# bidilink

./: .gitignore  Makefile.am  bootstrap.sh  configure.ac
debian/: changelog  control  copyright  docs  rules
doc/: Makefile.am  README.html.in  style.css
man/: .gitignore  Makefile.am  bidilink.1.xml.in  xmltoman.css  xmltoman.dtd  xmltoman.xsl
src/: .gitignore  Makefile  Makefile.am  bidilink.c  client-tcp.c  client-tcp.h  client-tcp6.c  client-tcp6.h  client-tty.c  client-tty.h  client-unix.c  client-unix.h  exec.c  exec.h  server-tcp.c  server-tcp.h  server-tcp6.c  server-tcp6.h  server-tty.c  server-tty.h  server-unix.c  server-unix.h  std.c  std.h  stream.c  stream.h
